# mini-pascal-compiler

./: .gitignore  CMakeLists.txt  Makefile  calc  compila  compiler.c  compiler.h  lexical.c  lexical.h  my_program.p  operations.p  output  program  program.p  simple  tokens.h  write-read.p
.claude/: settings.local.json
.history/src/: main_20250830212352.c  main_20250831170133.c
compiler/backend/codegen/: codegen.c
compiler/backend/linker/: linker.c  linker.h
compiler/backend/x86_translator/: x86_translator.c
compiler/frontend/lexer/: lexer.c
compiler/frontend/parser/: parser.c  parser.h
compiler/frontend/semantic/: semantic.c  semantic.h
compiler/main/: main.c
compiler/utils/: errors.c  errors.h  globals.c
documentation/: README.md  compiler.h  erreurs.txt
examples/: calculator.p  simple_test.p
include/: codegen.h  lexer.h  types.h  x86_translator.h
src/backend/: linker.c  x86_translator.c
src/codegen/: codegen.c
src/lexer/: lexer.c
src/parser/: parser.c
src/semantic/: semantic.c
src/utils/: errors.c  globals.c
test-programs/: test  test1  test2  test4  test5
tests/: test2  test3  test4  test5
